--- a/FrontEnd/loginold.html
+++ b/FrontEnd/loginold.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
   <meta name="description" content="">
   <link rel="stylesheet" href="./assets/styletest.css">
-  
+  <script src="./js/libs/loginold.js" defer></script>
   <script src="https://kit.fontawesome.com/50bd61e104.js" crossorigin="anonymous"></script>
 </head>
 
@@ -47,10 +47,6 @@
       </ul>
     </nav>
   </footer>
-  <script type="module" src="./js/libs/api.js" ></script>
-  <script type="module" src="./js/libs/auth.js" ></script>
-  <script type="module" src="./js/libs/loginold.js" ></script>
-
 </body>
 
 </html>
