--- a/FrontEnd/indexold.html
+++ b/FrontEnd/indexold.html
@@ -12,6 +12,8 @@
 	<meta name="description" content="">
 	<script src="https://kit.fontawesome.com/50bd61e104.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/styletest.css">
+	<script type="module" src="./js/views/indexold.js" defer></script>
+	<script type="module" src="./js/views/modalold.js" defer></script>
 </head>
 
 <body>
@@ -107,7 +109,6 @@
 			</ul>
 		</nav>
 	</footer>
-	<script type="module" src="./js/controller/main.js"></script>
 </body>
 
 </html>
