Change in project structuration and New ReadMe

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,7 @@
 		rel="stylesheet">
 	<meta name="description" content="">
 	<script src="https://kit.fontawesome.com/50bd61e104.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./assets/styletest.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -107,7 +107,7 @@
 			</ul>
 		</nav>
 	</footer>
-	<script type="module" src="./js/controller/main.js"></script>
+	<script type="module" src="./src/controllers/main.js"></script>
 </body>
 
 </html>
