--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
   <meta name="description" content="">
-  <link rel="stylesheet" href="./assets/styletest.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   
   <script src="https://kit.fontawesome.com/50bd61e104.js" crossorigin="anonymous"></script>
 </head>
@@ -47,7 +47,7 @@
       </ul>
     </nav>
   </footer>
-  <script type="module" src="./js/libs/loginold.js" ></script>
+  <script type="module" src="./src/controllers/login.js" ></script>
 
 </body>
 
